--- a/src/components/CardFile.astro
+++ b/src/components/CardFile.astro
@@ -21,7 +21,7 @@ if (!images[imagePath])
 console.log(tags);
 ---
 
-<div class="rounded-xl bg-blue-100 py-8">
+<div class="rounded-xl bg-blue-100 py-14">
     <div class="flex items-center justify-between">
         <div class="mx-2 space-x-2">
             {tags.map(tag => 
@@ -38,5 +38,5 @@ console.log(tags);
             height={300}
         />
     </div>
-    <h1 class="font-script text-center">{name}</h1>
+    <h1 class="font-script text-center text-xl sm:text-lg">{name}</h1>
 </div>
