--- a/src/components/CardTipeOne.astro
+++ b/src/components/CardTipeOne.astro
@@ -18,10 +18,24 @@ if (!images[imagePath])
     );
 ---
 
-<div class="max-w-5xl mx-auto">
-    <div class="relative z-0 flex items-center justify-center">
+<div class="max-w-screen-lg mx-auto p-4 sm:p-0">
+    <div
+        class="sm:relative z-0 sm:flex sm:flex-col-reverse justify-center mx-auto"
+    >
+        <div class="w-full sm:w-1/2">
+            <div
+                class="sm:absolute z-20 sm:right-8 md:right-16 lg:right-28 sm:top-4"
+            >
+                <Image
+                    src={images[imagePath]()}
+                    alt={altText}
+                    width={600}
+                    height={500}
+                />
+            </div>
+        </div>
         <div
-            class="flex flex-col items-start w-3/4 bg-slate-100 opacity-70 border rounded-lg py-24 px-8 relative z-10"
+            class="flex flex-col items-start w-full sm:w-2/4 bg-slate-100 opacity-70 border rounded-xl py-24 px-8 relative z-10"
         >
             <h3 class="text-xl font-script">{name}</h3>
             <span class="text-sm font-extralight my-4 text-gray-500"
@@ -30,16 +44,6 @@ if (!images[imagePath])
             <div class="inline-flex space-x-3 text-xs font-bold text-gray-600">
                 <button class="border-2 rounded-lg p-1">New</button>
                 <button class="border-2 rounded-lg p-1">Bundle</button>
-            </div>
-        </div>
-        <div class="w-1/2">
-            <div class="absolute z-10 left-80 top-4">
-                <Image
-                    src={images[imagePath]()}
-                    alt={altText}
-                    width={600}
-                    height={500}
-                />
             </div>
         </div>
     </div>
