--- a/src/components/HeaderHome.astro
+++ b/src/components/HeaderHome.astro
@@ -1,5 +1,5 @@
-<header class="bg-red-50 select-none flex items-center justify-between m-8 ">
+<header class="bg-red-50 select-none flex items-center justify-between my-8 mx-4 sm:mx-8 ">
     <span>Logo</span>
-    <h1 class="text-center font-script text-3xl">Bakery Enchanted Example</h1>
+    <h1 class="text-center font-script  text-xl sm:text-2xl md:text-3xl">Bakery Enchanted Example</h1>
     <span>Carrito</span>
 </header>
