--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,6 @@
 import MainLayout from "@/layouts/MainLayout.astro";
 import CardTipeOne from "@/components/CardTipeOne.astro";
 import CardFile from "@/components/CardFile.astro";
-
 ---
 
 <MainLayout title="Home">
@@ -12,7 +11,9 @@ import CardFile from "@/components/CardFile.astro";
 		name="Triple Bundle Family Trouble"
 		age={19}
 	/>
-	<article class="max-w-5xl mx-auto mt-4 grid grid-cols-3 gap-4">
+	<article
+		class="max-w-5xl mx-auto mt-4 grid grid-cols-1 md:grid-cols-3 gap-4 px-4 md:px-0 "
+	>
 		<CardFile
 			imagePath="/src/assets/creamy_nonsense.webp"
 			altText="mixed_creamy"
