--- a/src/layouts/ProductLayout.astro
+++ b/src/layouts/ProductLayout.astro
@@ -3,11 +3,11 @@ import Image from "astro/components/Image.astro";
 import MainLayout from "./MainLayout.astro";
 import { type CollectionEntry } from "astro:content";
 type Props = CollectionEntry<"product">["data"];
-const { name, srcImage, bg, tags, price, altImage } = Astro.props;
+const { name, srcImage, tags, price, altImage } = Astro.props;
 ---
 
 <MainLayout title={name}>
-    <div class=`w-56 h-96 ${bg} `>   
+    <div class="w-56 h-96">   
         <h1>{name}</h1>
         <h3>${price}</h3>
         {tags.map(tag => <div>{tag}</div>) }
