--- a/src/layouts/SectionOne.astro
+++ b/src/layouts/SectionOne.astro
@@ -23,7 +23,7 @@ import CardFile from "../components/CardFile.astro";
         />
         <CardFile
             imagePath="/src/assets/chocolate_dream.webp"
-            altText="chcolato"
+            altText="chocolato"
             age={8}
             name="Chocolate Dream"
             tags={["New"]}
