--- a/src/components/HeaderHome.astro
+++ b/src/components/HeaderHome.astro
@@ -17,13 +17,19 @@ if (!images[imagePath])
     );
 ---
 
-<header
-    class="bg-red-50 select-none flex items-center justify-between my-8 mx-4 sm:mx-8"
->
-    <Image class="w-12 md:w-36 rounded-full mix-blend-multiply" src={images[imagePath]()} alt={altText}  />
+<header class="max-w-screen-2xl mx-auto">
+    <div
+        class="bg-red-50 select-none flex items-center justify-between my-4  sm:mx-8"
+    ><a href="/">
+        <Image
+            class="hidden md:block md:w-48 rounded-full mix-blend-multiply"
+            src={images[imagePath]()}
+            alt={altText}
+        />
+    </a>
         <h1 class="text-center font-script text-xl sm:text-2xl md:text-3xl">
             Bakery Enchanted Example
         </h1>
-        <Icon class="text-4xl" name={"lucide:shopping-cart"} />
-    </Image>
+        <Icon class="text-3xl md:text-5xl" name={"lucide:shopping-cart"} />
+    </div>
 </header>
