--- a/src/components/CardFile.astro
+++ b/src/components/CardFile.astro
@@ -1,43 +1,29 @@
 ---
 import { Image } from "astro:assets";
+import { type CollectionEntry } from "astro:content";
+type Props = CollectionEntry<"product">["data"] & { slug: string };
+const { name, srcImage, tags, price, altImage, slug} = Astro.props;
 
-interface Props {
-    imagePath: string;
-    altText: string;
-    name: string;
-    age: number;
-    tags: string[];
-    bg:string,
-}
-
-const { imagePath, altText, name, age, tags, bg } = Astro.props;
-const images = import.meta.glob<{ default: ImageMetadata }>(
-    "/src/assets/*.{jpeg,jpg,png,gif,webp}",
-);
-if (!images[imagePath])
-    throw new Error(
-        `"${imagePath}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif,webp}"`,
-    );
-
-console.log(tags);
 ---
 
-<div class=`rounded-xl ${bg} py-14`>
-    <div class="flex items-center justify-between">
-        <div class="mx-2 space-x-2">
-            {tags.map(tag => 
-                 <button class="border bg-slate-300 font-extralight text-xs text-gray-700 p-1 px-2 rounded-xl">{tag}</button>
-            )}
+<a href=`/product/${slug}`>
+    <div class=`rounded-xl  py-14`>
+        <div class="flex items-center justify-between">
+            <div class="mx-2 space-x-2">
+                {
+                    tags.map((tag) => (
+                        <button class="border bg-slate-300 font-extralight text-xs text-gray-700 p-1 px-2 rounded-xl">
+                            {tag}
+                        </button>
+                    ))
+                }
+            </div>
+            <span class="mx-4 text-gray-600">${price}</span>
         </div>
-        <span class="mx-4 text-gray-600  ">${age}</span>
+        <div class="flex items-center justify-center mx-auto">
+            <Image src={srcImage} alt={altImage} width={300} height={300} />
+        </div>
+        <h1 class="font-script text-center text-xl sm:text-lg">{name}</h1>
     </div>
-    <div class="flex items-center justify-center mx-auto">
-        <Image
-            src={images[imagePath]()}
-            alt={altText}
-            width={300}
-            height={300}
-        />
-    </div>
-    <h1 class="font-script text-center text-xl sm:text-lg">{name}</h1>
-</div>
+</a>
+
