--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,9 +1,10 @@
 ---
 import "@/styles/global.css";
+import { ViewTransitions } from "astro:transitions";
 interface Props {
     title: string;
 }
-const {title} = Astro.props;
+const { title } = Astro.props;
 ---
 
 <head>
@@ -33,4 +34,6 @@ const {title} = Astro.props;
         crossorigin
     />
     <title>{title}</title>
+
+    <ViewTransitions />
 </head>
