--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,11 +18,11 @@ const products = await getCollection("product");
 			age={19}
 		/>
 		<article
-			class="max-w-5xl mx-auto mt-4 grid grid-cols-1 md:grid-cols-3 gap-4 px-4 md:px-0"
+			class="max-w-5xl mx-auto "
 		>
-			<FileProduct title="Related do(u)nuts">
+			<FileProduct title="">
 				{
-					products.map((product) => (
+					products.slice(0,3).slice(0,3).map((product) => (
 						<CardFile {...product.data} slug={product.slug} />
 					))
 				}
@@ -38,28 +38,16 @@ const products = await getCollection("product");
 			age={1}
 		/>
 		<article
-			class="max-w-5xl mx-auto mt-4 grid grid-cols-1 md:grid-cols-3 gap-4 px-4 md:px-0"
+			class="max-w-5xl mx-auto "
 		>
-			<FileProduct title="Related do(u)nuts">
-				{
-					products.map((product) => (
-						<CardFile {...product.data} slug={product.slug} />
-					))
-				}
-			</FileProduct>
+			
 		</article>
 	</section>
 	<section>
 		<article
-			class="max-w-5xl mx-auto mt-4 grid grid-cols-1 md:grid-cols-3 gap-4 px-4 md:px-0"
+			class="max-w-5xl mx-auto "
 		>
-			<FileProduct title="Related do(u)nuts">
-				{
-					products.map((product) => (
-						<CardFile {...product.data} slug={product.slug} />
-					))
-				}
-			</FileProduct>
+			
 		</article>
 	</section>
 </MainLayout>
