--- a/src/layouts/ProductLayout.astro
+++ b/src/layouts/ProductLayout.astro
@@ -4,17 +4,19 @@ import MainLayout from "./MainLayout.astro";
 import { type CollectionEntry } from "astro:content";
 type Props = CollectionEntry<"product">["data"];
 import { fade } from "astro:transitions";
-
+import FileProduct from "../layouts/FileProduct.astro";
+import CardFile from "@/components/CardFile.astro";
+import { getCollection } from "astro:content";
+const products = await getCollection("product");
 
 const { name, srcImage, tags, price, altImage, description } = Astro.props;
 ---
 
 <MainLayout title={name}>
     <section
-   
         class="max-w-screen-2xl grid grid-cols-1 md:grid-cols-3 mx-auto pt-4 md:pt-2"
     >
-        <div class="my-auto" >
+        <div class="my-auto">
             <h1
                 class="font-script text-6xl md:w-96 text-center md:text-left text-gray-900"
             >
@@ -27,7 +29,11 @@ const { name, srcImage, tags, price, altImage, description } = Astro.props;
             </p>
         </div>
 
-        <div class=""  transition:name={name} transition:animate={fade({duration : "0.3s"})}>
+        <div
+            class=""
+            transition:name={name}
+            transition:animate={fade({ duration: "0.3s" })}
+        >
             <Image
                 class="rounded-full object-cover"
                 width={500}
@@ -100,5 +106,25 @@ const { name, srcImage, tags, price, altImage, description } = Astro.props;
         <slot />
     </div>
 
-    <div class="my-8 max-w-screen-xl mx-auto"></div>
+    <div class="max-w-screen-xl mx-auto">
+        <h4 class="flex items-center justify-start font-script my-4">
+            Related Donuts
+        </h4>
+        <FileProduct title="Our Donuts">
+            {
+                products
+                    .sort(() => Math.random() - 0.5)
+                    .slice(0, 5)
+                    .filter((product) => product.data.name !== name)
+                    .map((product) => (
+                        <CardFile
+                            {...product.data}
+                            slug={product.slug}
+                            bg="bg-blue-200"
+                        />
+                    ))
+            }
+        </FileProduct>
+    </div>
 </MainLayout>
+<div class="my-8 max-w-screen-xl mx-auto"></div>
