--- a/src/layouts/FileProduct.astro
+++ b/src/layouts/FileProduct.astro
@@ -1,14 +1,5 @@
----
-interface Props {
-    title: string;
-}
-const { title } = Astro.props;
----
 
-<article class="flex items-center justify-start space-x-4">
-    <h4 class="flex items-center justify-start font-script my-4">
-        {title}
-    </h4>
 
+<article class="flex flex-col-reverse md:flex-row-reverse gap-4 ">
     <slot />
 </article>
