--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -11,7 +11,13 @@ const { title } = Astro.props;
 <html lang="en">
     <BaseHead title={title} />
     <HeaderHome imagePath="/src/assets/logo.jpg" altText="logo Bakery" />
-    <body class="bg-red-50 select-none m-4 full-page-figure ">
+    <body class="bg-red-50 select-none m-4 full-page-figure">
         <slot />
+        <footer class="flex items-center justify-center m-4 my-8 text-sm">
+            <p>
+                Desarrollado por <span class="font-script font-bold">Fabian Fonseca</span>, Inspirado en Dounot <a href="https://dounut-astro.vercel.app/" target="_blank" class="text-blue-400 hover:underline hover:text-blue-600"
+                    >https://dounut-astro.vercel.app/</a>
+            </p>
+        </footer>
     </body>
 </html>
