--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ const products = await getCollection("product");
 <MainLayout title="Home">
 	<section>
 		<CardTipeOne
-			imagePath="/src/assets/imagen1.webp"
+			imagePath="/assets/imagen1.webp"
 			altText="Imagen 1"
 			name="Triple Bundle Family Trouble"
 			age={19}
@@ -35,7 +35,7 @@ const products = await getCollection("product");
 
 	<section class="my-6">
 		<CardTipeOne
-			imagePath="/src/assets/donuts.webp"
+			imagePath="/assets/donuts.webp"
 			altText="strawberry_bg"
 			name="Strawberry Massacre"
 			age={1}
