--- a/src/components/HeaderHome.astro
+++ b/src/components/HeaderHome.astro
@@ -1,20 +1,11 @@
 ---
 import { Icon } from "astro-icon/components";
-import { Image } from "astro:assets";
-
+import Image from "astro/components/Image.astro";
 interface Props {
-    imagePath: string;
-    altText: string;
+    rutImage:string,
+    altImage:string
 }
-
-const { imagePath, altText } = Astro.props;
-const images = import.meta.glob<{ default: ImageMetadata }>(
-    "/src/assets/*.{jpeg,jpg,png,gif,webp}",
-);
-if (!images[imagePath])
-    throw new Error(
-        `"${imagePath}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif,webp}"`,
-    );
+const {rutImage , altImage} = Astro.props
 ---
 
 <header class="max-w-screen-2xl mx-auto">
@@ -23,8 +14,10 @@ if (!images[imagePath])
     ><a href="/">
         <Image
             class="hidden md:block md:w-48 rounded-full mix-blend-multiply"
-            src={images[imagePath]()}
-            alt={altText}
+            src={rutImage}
+            alt={altImage}
+            width={100}
+            height={100}
         />
     </a>
         <h1 class="text-center font-script text-xl sm:text-2xl md:text-3xl">
