--- a/src/components/CardTipeOne.astro
+++ b/src/components/CardTipeOne.astro
@@ -1,42 +1,43 @@
 ---
-import Image from 'astro/components/Image.astro';
-interface Props {
-    imagePath: string;
-    altText: string;
-    name: string;
-    age: number;
-}
-const { imagePath, altText, name, age } = Astro.props;
+import Image from "astro/components/Image.astro";
+import { type CollectionEntry } from "astro:content";
+import { fade } from "astro:transitions";
+type Props = CollectionEntry<"product">["data"] & { slug: string; bg: string };
 
+const { name, srcImage, tags, price, altImage, slug, bg } = Astro.props;
 ---
 
-<div class="max-w-screen-lg mx-auto p-4 sm:p-0">
-    <div
-        class="sm:relative z-0 sm:flex sm:flex-col-reverse justify-center mx-auto"
-    >
-        <div class="w-full sm:w-1/2">
-            <div
-                class="sm:absolute z-20 sm:-right-16 md:right-4 lg:right-12 sm:top-0"
-            >
-                <Image
-                    src={imagePath}
-                    alt={altText}
-                    width={600}
-                    height={500}
-                />
-            </div>
-        </div>
+<a href=`/product/${slug}`>
+    <div class="max-w-screen-lg mx-auto p-4 sm:p-0">
         <div
-            class="flex flex-col items-start w-full sm:w-3/5 bg-slate-100 opacity-70 border rounded-xl py-24 px-8 relative z-10"
+            class="sm:relative z-0 sm:flex sm:flex-col-reverse justify-center mx-auto"
         >
-            <h3 class="text-xl font-script">{name}</h3>
-            <span class="text-sm font-extralight my-4 text-gray-500"
-                >${age}</span
+            <div class="w-full sm:w-1/2">
+                <div
+                    class="sm:absolute z-20 sm:-right-16 md:right-4 lg:right-12 sm:top-0"
+                >
+                    <Image
+                        src={srcImage}
+                        alt={altImage}
+                        width={600}
+                        height={500}
+                    />
+                </div>
+            </div>
+            <div
+                class="flex flex-col items-start w-full sm:w-3/5 bg-slate-100 opacity-70 border rounded-xl py-24 px-8 relative z-10"
             >
-            <div class="inline-flex space-x-3 text-xs font-bold text-gray-600">
-                <button class="border-2 rounded-lg p-1">New</button>
-                <button class="border-2 rounded-lg p-1">Bundle</button>
+                <h3 class="text-xl font-script">{name}</h3>
+                <span class="text-sm font-extralight my-4 text-gray-500"
+                    >${price}</span
+                >
+                <div
+                    class="inline-flex space-x-3 text-xs font-bold text-gray-600"
+                >
+                    <button class="border-2 rounded-lg p-1">New</button>
+                    <button class="border-2 rounded-lg p-1">Bundle</button>
+                </div>
             </div>
         </div>
-    </div>
-</div>
+    </div></a
+>
