--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props;
 <!doctype html>
 <html lang="en">
     <BaseHead title={title}/>
-    <HeaderHome altImage="logo" rutImage="/assets/logo.jpg" />
+    <HeaderHome altImage="logo" rutImage="/assets/logo.png" />
     <body class="bg-red-50 select-none m-4 full-page-figure">
         <slot />
         <footer class="flex items-center justify-center m-4 my-8 text-sm">
