--- a/src/components/HeaderHome.astro
+++ b/src/components/HeaderHome.astro
@@ -2,26 +2,27 @@
 import { Icon } from "astro-icon/components";
 import Image from "astro/components/Image.astro";
 interface Props {
-    rutImage:string,
-    altImage:string
+    rutImage: string;
+    altImage: string;
 }
-const {rutImage , altImage} = Astro.props
+const { rutImage, altImage } = Astro.props;
 ---
 
-<header class="max-w-screen-2xl mx-auto">
+<header class="max-w-screen-2xl mx-auto  md:mb-8">
     <div
-        class="bg-red-50 select-none flex items-center justify-between my-4  sm:mx-8"
-    ><a href="/">
-        <Image
-            class="hidden md:block md:w-48 rounded-full mix-blend-multiply"
-            src={rutImage}
-            alt={altImage}
-            width={100}
-            height={100}
-        />
-    </a>
-        <h1 class="text-center font-script text-xl sm:text-2xl md:text-3xl">
-            Bakery Enchanted Example
+        class="bg-red-50 select-none flex items-center justify-between my-4 sm:mx-8"
+    >
+        <a href="/">
+            <Image
+                class="flex items-center justify-start mx-auto w-20 sm:w-32 scale-150"
+                src={rutImage}
+                alt={altImage}
+                width={1}
+                height={1}
+            />
+        </a>
+        <h1 class="text-center font-script text-2xl sm:text-3xl md:text-4xl">
+            Bakery Enchanted
         </h1>
         <Icon class="text-3xl md:text-5xl" name={"lucide:shopping-cart"} />
     </div>
