--- a/src/components/CardFile.astro
+++ b/src/components/CardFile.astro
@@ -8,7 +8,9 @@ const { name, srcImage, tags, price, altImage, slug, bg } = Astro.props;
 ---
 
 <a href=`/product/${slug}`>
-    <div class=`rounded-xl  py-8 ${bg} h-96`>
+    <div
+        class=`rounded-xl  py-8 ${bg} h-96 hover:bg-blue-100 duration-200 group`
+    >
         <div class="flex items-center justify-between">
             <div class="mx-2 space-x-2">
                 {
@@ -24,7 +26,7 @@ const { name, srcImage, tags, price, altImage, slug, bg } = Astro.props;
         <div
             transition:name={name}
             transition:animate={fade({ duration: "0.4s" })}
-            class="flex items-center justify-center mx-auto"
+            class="flex items-center justify-center mx-auto group-hover:rotate-12 duration-200"
         >
             <Image src={srcImage} alt={altImage} width={300} height={300} />
         </div>
