--- a/src/components/CardTipeOne.astro
+++ b/src/components/CardTipeOne.astro
@@ -10,7 +10,7 @@ const { name, srcImage, tags, price, altImage, slug, bg } = Astro.props;
 <a href=`/product/${slug}`>
     <div class="max-w-screen-lg mx-auto p-4 sm:p-0">
         <div
-            class="sm:relative z-0 sm:flex sm:flex-col-reverse justify-center mx-auto"
+            class="sm:relative z-0 sm:flex sm:flex-col-reverse justify-center mx-auto group"
         >
             <div class="w-full sm:w-1/2">
                 <div
@@ -25,7 +25,7 @@ const { name, srcImage, tags, price, altImage, slug, bg } = Astro.props;
                 </div>
             </div>
             <div
-                class="flex flex-col items-start w-full sm:w-3/5 bg-slate-100 opacity-70 border rounded-xl py-24 px-8 relative z-10"
+                class="flex flex-col items-start w-full sm:w-3/5 bg-slate-100 group-hover:bg-purple-200 duration-300 opacity-70 border rounded-xl py-24 px-8 relative z-10"
             >
                 <h3 class="text-xl font-script">{name}</h3>
                 <span class="text-sm font-extralight my-4 text-gray-500"
