--- a/src/components/CardTipeOne.astro
+++ b/src/components/CardTipeOne.astro
@@ -7,14 +7,16 @@ type Props = CollectionEntry<"product">["data"] & { slug: string; bg: string };
 const { name, srcImage, tags, price, altImage, slug, bg } = Astro.props;
 ---
 
-<a href=`/product/${slug}`>
-    <div class="max-w-screen-lg mx-auto p-4 sm:p-0">
-        <div
-            class="sm:relative z-0 sm:flex sm:flex-col-reverse justify-center mx-auto group"
-        >
+<div class="max-w-screen-lg mx-auto p-4 sm:p-0">
+    <div
+        class="sm:relative z-0 sm:flex sm:flex-col-reverse justify-center mx-auto group"
+    >
+        <a href=`/product/${slug}`>
             <div class="w-full sm:w-1/2">
                 <div
-                    class="sm:absolute z-20 sm:-right-16 md:right-4 lg:right-12 sm:top-0" transition:name={name} transition:animate={fade({duration: '0.4s'})}
+                    class="sm:absolute z-20 sm:-right-16 md:right-4 lg:right-12 sm:top-0"
+                    transition:name={name}
+                    transition:animate={fade({ duration: "0.4s" })}
                 >
                     <Image
                         src={srcImage}
@@ -38,6 +40,6 @@ const { name, srcImage, tags, price, altImage, slug, bg } = Astro.props;
                     <button class="border-2 rounded-lg p-1">Bundle</button>
                 </div>
             </div>
-        </div>
-    </div></a
->
+        </a>
+    </div>
+</div>
